# RosettaStone

./: .clang-format  .codacy.yml  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  14_deep_computer_vision_with_cnns.ipynb  3RD-PARTY.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  HOW_TO_ADD_CARD.md  Hearthstonepp.sln  INSTALL.md  PULL_REQUESTS.md  README.md  appveyor.yml  azure-pipelines.yml  codecov.yml  feed.xml  index.html  setup.py  sonar-project.properties
Extensions/HSppTorch/: CMakeLists.txt
Extensions/RosettaPython/: CMakeLists.txt  main.cpp
Extensions/RosettaPython/Sources/: main.cpp
Extensions/RosettaRL/: CMakeLists.txt
Extensions/RosettaRL/CMake/: MLLibraryOptions.cmake
Extensions/RosettaTorch/: CMakeLists.txt
Extensions/RosettaTorch/Scripts/: unzip.py
Extensions/RosettaTorch/Sources/: CMakeLists.txt
Extensions/RosettaTorch/Tests/: CMakeLists.txt  MCTSTests.cpp
Libraries/imgui/: CMakeLists.txt  imconfig.h  imgui-SFML.cpp  stb_truetype.h
Programs/GUI/: CMakeLists.txt  main.cpp
Programs/GUI/Sources/: main.cpp
Sources/Rosetta/: CMakeLists.txt
Sources/Rosetta/Accounts/: AccountInfo.cpp  DeckInfo.cpp
Sources/Rosetta/Actions/: ActionApplyHelper.cpp  ActionChoices.cpp  ActionParams.cpp  ActionTargets.cpp  ActionValidChecker.cpp  ActionValidGetter.cpp  Attack.cpp  CastSpell.cpp  Choose.cpp  Copy.cpp  Draw.cpp  Generic.cpp  PlayCard.cpp  Summon.cpp  Targeting.cpp
Sources/Rosetta/Auras/: AdaptiveCostEffect.cpp  AdaptiveEffect.cpp  AdjacentAura.cpp  Aura.cpp  EnrageEffect.cpp  SummoningPortalAura.cpp  SwitchingAura.cpp
Sources/Rosetta/CardSets/: BlackTempleCardsGen.cpp  BoomsdayCardsGen.cpp  CoreCardsGen.cpp  DalaranCardsGen.cpp  DemonHunterInitCardsGen.cpp  DragonsCardsGen.cpp  Expert1CardsGen.cpp  GvgCardsGen.cpp  HoFCardsGen.cpp  LootapaloozaCardsGen.cpp  UldumCardsGen.cpp  YoDCardsGen.cpp
Sources/Rosetta/Cards/: Card.cpp  CardDef.cpp  CardDefs.cpp  Cards.cpp
Sources/Rosetta/Common/: Utils.cpp
Sources/Rosetta/Commons/: DeckCode.cpp  DeckString.cpp  JSONSerializer.cpp  Utils.cpp
Sources/Rosetta/Conditions/: RelaCondition.cpp  SelfCondition.cpp
Sources/Rosetta/Enchants/: Aura.cpp  AuraEffects.cpp  Effect.cpp  Enchant.cpp  Enchants.cpp  OngoingEnchant.cpp  PlayerAuraEffects.cpp  Power.cpp  Powers.cpp  SwapCostEnchant.cpp  Trigger.cpp  Triggers.cpp
Sources/Rosetta/Games/: Game.cpp  GameAgent.cpp  GameManager.cpp  GameRestorer.cpp  GameState.cpp  TriggerManager.cpp
Sources/Rosetta/Loaders/: AccountLoader.cpp  CardLoader.cpp  InternalCardLoader.cpp  PowerLoader.cpp  QuestLoader.cpp  TargetingPredicates.cpp
Sources/Rosetta/Managers/: CardDataManager.cpp  CostManager.cpp  GameManager.cpp  TriggerEvent.cpp  TriggerEventHandler.cpp  TriggerManager.cpp
Sources/Rosetta/Models/: Battlefield.cpp  Character.cpp  Choice.cpp  Deck.cpp  Enchantment.cpp  Entity.cpp  Graveyard.cpp  Hand.cpp  Hero.cpp  HeroPower.cpp  Minion.cpp  Playable.cpp  Player.cpp  Spell.cpp  Weapon.cpp
Sources/Rosetta/Policies/: BasicPolicy.cpp  IoPolicy.cpp  RandomPolicy.cpp
Sources/Rosetta/Tasks/: ITask.cpp  TaskMeta.cpp  TaskQueue.cpp  TaskWrapper.cpp  Tasks.cpp
Sources/Rosetta/Triggers/: MultiTrigger.cpp  Trigger.cpp  Triggers.cpp
Sources/Rosetta/Views/: Board.cpp  BoardRefView.cpp  BoardView.cpp  ReducedBoardView.cpp
Sources/Rosetta/Zones/: DeckZone.cpp  FieldZone.cpp  GraveyardZone.cpp  HandZone.cpp  SecretZone.cpp  SetasideZone.cpp
Sources/hspp/: CMakeLists.txt
Sources/hspp/Accounts/: Account.cpp  AccountInfo.cpp  DeckInfo.cpp  Player.cpp
Sources/hspp/Actions/: Attack.cpp  Choose.cpp  Draw.cpp  Generic.cpp  PlayCard.cpp  Targeting.cpp
Sources/hspp/CardSets/: BasicCardsGen.cpp  CoreCardsGen.cpp
Sources/hspp/Cards/: Card.cpp  Cards.cpp  Character.cpp  Deck.cpp  Enchantment.cpp  Entity.cpp  Hero.cpp  HeroPower.cpp  Minion.cpp  Spell.cpp  Weapon.cpp
Sources/hspp/Enchants/: Effect.cpp  Enchant.cpp  Power.cpp  Powers.cpp
Sources/hspp/Game/: Game.cpp
Sources/hspp/Games/: Game.cpp  GameAgent.cpp  GameManager.cpp
Sources/hspp/Loaders/: AccountLoader.cpp  CardLoader.cpp  PowerLoader.cpp
Sources/hspp/Managers/: GameAgent.cpp  GameInterface.cpp
Sources/hspp/Models/: Battlefield.cpp  Character.cpp  Deck.cpp  Entity.cpp  Game.cpp  GameAgent.cpp  Graveyard.cpp  Hand.cpp  Hero.cpp  HeroPower.cpp  Minion.cpp  Player.cpp  Spell.cpp  Weapon.cpp
Sources/hspp/Policies/: BasicPolicy.cpp  IoPolicy.cpp  TorchPolicy.cpp
Sources/hspp/Policy/: BasicPolicy.cpp  IoPolicy.cpp
Sources/hspp/Tasks/: Requirement.cpp  TaskAgent.cpp  TaskMeta.cpp  TaskSerializer.cpp  TaskWrapper.cpp  Tasks.cpp
Tests/UnitTests/: BasicCardTests.cpp  CMakeLists.txt  CardTests.cpp  CardsTests.cpp  DeckTests.cpp  Generator.cpp  Generator.h  PlayerTests.cpp  TaskAgentTests.cpp  TaskMetaTests.cpp  TaskSerializerTest.cpp  TaskSerializerTests.cpp  TasksTests.cpp  TestUtils.cpp  TestUtils.h  TestUtils.hpp  UnitTests.cpp  doctest_proxy.hpp  main.cpp
Tests/UnitTests/Accounts/: AccountInfoTests.cpp  AccountTests.cpp  DeckInfoTests.cpp  PlayerTests.cpp
Tests/UnitTests/Actions/: ActionChoicesTests.cpp  ActionParamsTests.cpp  ActionValidCheckerTests.cpp  ChooseTests.cpp  CopyTests.cpp  GenericTests.cpp
Tests/UnitTests/CardSets/: BasicCardTests.cpp  BlackTempleCardsGenTests.cpp  CoreCardsGenTests.cpp  DalaranCardsGenTests.cpp  DemonHunterInitCardsGenTests.cpp  DragonsCardsGenTests.cpp  Expert1CardsGenTests.cpp  HoFCardsGenTests.cpp  UldumCardsGenTests.cpp  YoDCardsGenTests.cpp
Tests/UnitTests/Cards/: CardTests.cpp  CardsTests.cpp  DeckTests.cpp
Tests/UnitTests/Common/: UtilsTests.cpp
Tests/UnitTests/Commons/: DeckCodeTests.cpp  DeckStringTests.cpp  UtilsTests.cpp
Tests/UnitTests/Enchants/: PlayerAuraEffectsTests.cpp  TriggerTests.cpp
Tests/UnitTests/Games/: GameTests.cpp
Tests/UnitTests/Managers/: PlayerTests.cpp
Tests/UnitTests/Models/: CharacterTests.cpp
Tests/UnitTests/Policies/: RandomPolicyTests.cpp
Tests/UnitTests/Tasks/: TaskAgentTests.cpp  TaskMetaTests.cpp  TaskSerializerTests.cpp  TestTasks.h
Tests/UnitTests/Utils/: TestTasks.h  (+10 more)
(+2859 files in other folders)
